--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 sudo: required
 
-language: c
-
 services:
   - docker
 
 before_install:
 - docker pull wolf3d/palmos.sdk.3.1
-- docker run -d -v $(pwd):/root/neko-for-pilot wolf3d/palmos.sdk.3.1 /bin/sh -c "cd /root/neko-for-pilot;"
-- docker ps -a
 
+script:
+- docker run -d -v $(pwd):/root/neko-for-pilot wolf3d/palmos.sdk.3.1 /bin/sh -c "cd /root/neko-for-pilot;ls -lrta"
