--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ before_install:
 script:
 - docker run -it -v $(pwd):/root/neko-for-pilot wolf3d/palmos.sdk.3.1 /bin/sh -c "cd
   /root/neko-for-pilot/neko/src && make"
+before_deploy:
+  - git config --global user.email "builds@travis-ci.com"
+  - git config --global user.name "Travis CI"
+  - export GIT_TAG=$TRAVIS_BRANCH-0.1.$TRAVIS_BUILD_NUMBER
+  - git tag $GIT_TAG -a -m "Generated tag from TravisCI for build $TRAVIS_BUILD_NUMBER"
+  - git push -q https://$TAGPERM@github.com/wolf3d/neko-for-pilot --tags
+  - ls -R
 deploy:
   provider: releases
   api_key:
