--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ before_install:
 script:
 - docker run -it -v $(pwd):/root/neko-for-pilot wolf3d/palmos.sdk.3.1 /bin/sh -c "cd
   /root/neko-for-pilot/neko/src && make"
+before_deploy:
+  - ls -Rl *
 deploy:
   provider: releases
   api_key:
